--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -68,10 +68,10 @@
                                 <wm-gridrow name="gridrow9" padding=".5em unset">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn17">
-                                        <wm-composite name="composite1" required="false">
+                                        <wm-composite name="composite1" required="true">
                                             <wm-label class="col-md-3 control-label" name="label4" caption="Status"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
-                                                <wm-select name="selectStatus" dataset="bind:Variables.FormStatus.dataSet" datafield="All Fields" displayfield="status" datavalue="bind:Variables.stvCurrentStatus.dataSet"></wm-select>
+                                                <wm-select name="selectStatus" dataset="bind:Variables.FormStatus.dataSet" datafield="All Fields" displayfield="status" datavalue="bind:Variables.stvCurrentStatus.dataSet" required="true"></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -80,7 +80,7 @@
                                 <wm-gridrow name="gridrow10" padding="unset unset .5em unset">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn18"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn19">
-                                        <wm-composite name="composite2">
+                                        <wm-composite name="composite2" required="true">
                                             <wm-label class="col-md-3 control-label" name="label5" caption="Notes"></wm-label>
                                             <wm-container class="col-md-9" name="container3">
                                                 <wm-textarea name="textareaNotes" placeholder="Please enter your comments"></wm-textarea>
@@ -92,7 +92,7 @@
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" horizontalalign="center">
-                                        <wm-button class="btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.svSetFormStatus.invoke()" iconclass="wi wi-update"></wm-button>
+                                        <wm-button class="btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.svSetFormStatus.invoke()" iconclass="wi wi-update" disabled="bind:!Widgets.selectStatus.datavalue.id || !Widgets.textareaNotes.datavalue"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                                 </wm-gridrow>
