Changed notes to update on keypress for more responsiveness Files modified - [Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -83,7 +83,7 @@
                                         <wm-composite name="composite2" required="true">
                                             <wm-label class="col-md-3 control-label" name="label5" caption="Notes"></wm-label>
                                             <wm-container class="col-md-9" name="container3">
-                                                <wm-textarea name="textareaNotes" placeholder="Please enter your comments"></wm-textarea>
+                                                <wm-textarea name="textareaNotes" placeholder="Please enter your comments" updateon="default"></wm-textarea>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
