added CXAdmin tab Files modified - [ManageRoles.html]

--- a/src/main/webapp/pages/ManageRoles/ManageRoles.html
+++ b/src/main/webapp/pages/ManageRoles/ManageRoles.html
@@ -16,6 +16,7 @@
                             <wm-tabs name="tabs1">
                                 <wm-tabpane name="tabpane1" title="Municipality Roles"></wm-tabpane>
                                 <wm-tabpane name="tabpane2" title="Company Roles"></wm-tabpane>
+                                <wm-tabpane name="tabpane3" title="CX Admin"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
